--- a/DracoSoft_Server/config/server/main.yaml
+++ b/DracoSoft_Server/config/server/main.yaml
@@ -9,7 +9,8 @@ modules:
     user_management: "user_management_module"
     authorization: "authorization_module"
     flask: "flask_module"
-    ServerGui: 'server_gui_module'
+    WebGUI: 'web_gui_module'
+    #ServerGui: 'server_gui_module'
     # admin: "admin_console"
 
   # Module loading order
@@ -19,7 +20,8 @@ modules:
     - "user_management"
     - "authorization"
     - "flask"
-    - "ServerGui"
+    - "WebGUI"
+    #- "ServerGui"
     # - "admin"
 
   # Module shutdown order (reverse of load order by default)
@@ -29,7 +31,8 @@ modules:
     - "flask"
     - "sqlite_module"
     - "network_module"
-    - "ServerGui"
+    - "WebGUI"
+    #- "ServerGui"
     # - "admin"
 
 # Directory paths (relative to server root)
