--- a/DracoSoft_Server/requirements.txt
+++ b/DracoSoft_Server/requirements.txt
@@ -1,8 +1,11 @@
 aiosqlite==0.20.0
-Flask==3.1.0
+Flask[async]==3.1.0
+Flask-CORS==4.0.0
 psutil==6.1.0
+PyJWT==2.8.0
 PyQt6==6.8.0
 PyYAML==6.0.2
 qasync==0.27.1
 Requests==2.32.3
 watchdog==6.0.0
+asgiref==3.7.2
